// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AnalyticsService historical should return a formatted time series for days 1`] = `
{
  "historical": [
    {
      "date": "2022-03-20",
      "pageviews": "1",
      "visits": "5",
    },
    {
      "date": "2022-03-20",
      "pageviews": "3",
      "visits": "7",
    },
  ],
  "stories": [
    {
      "pageviews": "1",
      "pathname": "/test.btc/path-test",
      "visits": "5",
    },
    {
      "pageviews": "3",
      "pathname": "/test.btc/path-test-2",
      "visits": "7",
    },
  ],
}
`;

exports[`AnalyticsService historical should return a formatted time series for months 1`] = `
{
  "historical": [
    {
      "date": "2022-03-01",
      "pageviews": "1",
      "visits": "5",
    },
  ],
  "stories": [
    {
      "pageviews": "1",
      "pathname": "/test.btc/path-test",
      "visits": "5",
    },
    {
      "pageviews": "3",
      "pathname": "/test.btc/path-test-2",
      "visits": "7",
    },
  ],
}
`;

exports[`AnalyticsService historical should return a formatted time series for one story 1`] = `
{
  "historical": [
    {
      "date": "2022-03-01",
      "pageviews": "1",
      "visits": "5",
    },
  ],
  "stories": [
    {
      "pageviews": "1",
      "pathname": "/test.btc/path-test",
      "visits": "5",
    },
  ],
}
`;

exports[`AnalyticsService referrers should return referrers 1`] = `
[
  {
    "count": "10",
    "domain": "Direct / None",
  },
  {
    "count": "1",
    "domain": "https://stacks.co",
  },
]
`;

exports[`AnalyticsService referrers should return referrers for one story 1`] = `
[
  {
    "count": "5",
    "domain": "https://stacks.co",
  },
]
`;
